k8s/micronaut-sample.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "micronaut-sample"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "micronaut-sample"
  template:
    metadata:
      labels:
        app: "micronaut-sample"
    spec:
      containers:
        - name: "micronaut-sample"
          image: "circolonerd/micronaut-sample-service:v4"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health/readiness
              port: 8080
            initialDelaySeconds: 5
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /health/liveness
              port: 8080
            initialDelaySeconds: 5
            timeoutSeconds: 3
            failureThreshold: 10
---
apiVersion: v1
kind: Service
metadata:
  name: "micronaut-sample-service"
spec:
  selector:
    app: "micronaut-sample"
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
